--- a/src/index.html
+++ b/src/index.html
@@ -13,3 +13,303 @@
   <app-root></app-root>
 </body>
 </html>
+<!-- <!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>معاملات</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
+
+    .filters {
+      display: flex;
+      gap: 16px;
+      margin-bottom: 16px;
+      align-items: center;
+    }
+
+    .filters input, .filters select {
+      padding: 8px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-bottom: 16px;
+    }
+
+    th, td {
+      padding: 8px;
+      text-align: right;
+      border-bottom: 1px solid #ddd;
+    }
+
+    th {
+      background-color: #f5f5f5;
+    }
+
+    .pending-status {
+      background-color: #fff3cd;
+      color: #856404;
+      padding: 4px 8px;
+      border-radius: 4px;
+    }
+
+    .completed-status {
+      background-color: #d4edda;
+      color: #155724;
+      padding: 4px 8px;
+      border-radius: 4px;
+    }
+
+    .paginator {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 8px;
+    }
+
+    .page-size-selector {
+      display: flex;
+      align-items: center;
+    }
+
+    .page-size-selector select {
+      margin-left: 8px;
+      padding: 4px;
+    }
+
+    .page-numbers {
+      display: flex;
+      gap: 8px;
+    }
+
+    .page-numbers button {
+      padding: 4px 8px;
+      border: 1px solid #ddd;
+      background-color: #fff;
+      cursor: pointer;
+    }
+
+    .page-numbers button.active {
+      background-color: #ffca28;
+      border-color: #ffca28;
+    }
+
+    .page-numbers button:disabled {
+      color: #ccc;
+      cursor: not-allowed;
+    }
+
+    .material-icons {
+      vertical-align: middle;
+    }
+  </style>
+</head>
+<body>
+  <div class="filters">
+    <input type="text" id="search-input" placeholder="ابحث..." oninput="applyFilters()">
+    <select id="status-filter" onchange="applyFilters()">
+      <option value="all">الكل</option>
+      <option value="PENDING">قيد الانتظار</option>
+      <option value="COMPLETED">مكتمل</option>
+    </select>
+  </div>
+
+  <table id="transactions-table">
+    <thead>
+      <tr>
+        <th></th>
+        <th>التاريخ</th>
+        <th>الحالة</th>
+        <th>المبلغ</th>
+        <th>النوع</th>
+        <th>المصدر</th>
+        <th>الإجراءات</th>
+      </tr>
+    </thead>
+    <tbody id="transactions-body"></tbody>
+  </table>
+
+  <div class="paginator">
+    <div class="page-size-selector">
+      <span>عدد الصفوف</span>
+      <select id="page-size" onchange="changePageSize()">
+        <option value="5">5</option>
+        <option value="10" selected>10</option>
+        <option value="25">25</option>
+        <option value="50">50</option>
+      </select>
+    </div>
+
+    <div class="page-numbers" id="page-numbers"></div>
+
+    <div>
+      <span id="page-info"></span>
+      <a href="#" style="margin-right: 8px;">الذهاب إلى الإعدادات</a>
+    </div>
+  </div>
+
+  <script>
+    // البيانات المحاكاة
+    const allTransactions = Array.from({ length: 100 }, (_, index) => ({
+      id: index + 1,
+      date: "30/05/2025",
+      status: index % 2 === 0 ? "PENDING" : "COMPLETED", // بالتناوب بين PENDING و COMPLETED
+      amount: 950,
+      type: "سحب",
+      source: "حساب"
+    }));
+
+    let filteredTransactions = [...allTransactions]; // البيانات بعد الفلترة
+    let currentPage = 1;
+    let pageSize = 10;
+    let totalItems = filteredTransactions.length;
+    let totalPages = Math.ceil(totalItems / pageSize);
+
+    // دالة لتطبيق الفلترة والبحث
+    function applyFilters() {
+      const searchTerm = document.getElementById("search-input").value.toLowerCase();
+      const statusFilter = document.getElementById("status-filter").value;
+
+      filteredTransactions = allTransactions.filter(transaction => {
+        // فلترة حسب الحالة
+        const statusMatch = statusFilter === "all" || transaction.status === statusFilter;
+
+        // البحث في الحقول
+        const searchMatch = (
+          transaction.date.toLowerCase().includes(searchTerm) ||
+          transaction.amount.toString().includes(searchTerm) ||
+          transaction.type.toLowerCase().includes(searchTerm) ||
+          transaction.source.toLowerCase().includes(searchTerm)
+        );
+
+        return statusMatch && searchMatch;
+      });
+
+      // تحديث العدد الكلي وعدد الصفحات
+      totalItems = filteredTransactions.length;
+      totalPages = Math.ceil(totalItems / pageSize);
+      currentPage = 1; // إعادة تعيين الصفحة إلى الأولى بعد الفلترة
+      renderTable();
+    }
+
+    // دالة لعرض البيانات في الجدول
+    function renderTable() {
+      const start = (currentPage - 1) * pageSize;
+      const end = start + pageSize;
+      const transactions = filteredTransactions.slice(start, end);
+
+      const tbody = document.getElementById("transactions-body");
+      tbody.innerHTML = "";
+
+      transactions.forEach(transaction => {
+        const row = document.createElement("tr");
+        const statusClass = transaction.status === "PENDING" ? "pending-status" : "completed-status";
+        row.innerHTML = `
+          <td><input type="checkbox"></td>
+          <td>${transaction.date}</td>
+          <td><span class="${statusClass}">${transaction.status === "PENDING" ? "قيد الانتظار" : "مكتمل"}</span></td>
+          <td>${transaction.amount} جنيه</td>
+          <td>${transaction.type}</td>
+          <td>${transaction.source}</td>
+          <td><button><span class="material-icons">more_vert</span></button></td>
+        `;
+        tbody.appendChild(row);
+      });
+
+      renderPaginator();
+    }
+
+    // دالة لعرض الـ Paginator
+    function renderPaginator() {
+      totalPages = Math.ceil(totalItems / pageSize);
+      const pageNumbersDiv = document.getElementById("page-numbers");
+      pageNumbersDiv.innerHTML = "";
+
+      // زر "الأول"
+      const firstBtn = document.createElement("button");
+      firstBtn.innerHTML = "«";
+      firstBtn.disabled = currentPage === 1 || totalItems === 0;
+      firstBtn.onclick = () => {
+        currentPage = 1;
+        renderTable();
+      };
+      pageNumbersDiv.appendChild(firstBtn);
+
+      // زر "السابق"
+      const prevBtn = document.createElement("button");
+      prevBtn.innerHTML = "‹";
+      prevBtn.disabled = currentPage === 1 || totalItems === 0;
+      prevBtn.onclick = () => {
+        currentPage--;
+        renderTable();
+      };
+      pageNumbersDiv.appendChild(prevBtn);
+
+      // الأرقام
+      const maxPagesToShow = 5;
+      let startPage = Math.max(1, currentPage - 2);
+      let endPage = Math.min(totalPages, startPage + maxPagesToShow - 1);
+
+      if (endPage - startPage + 1 < maxPagesToShow) {
+        startPage = Math.max(1, endPage - maxPagesToShow + 1);
+      }
+
+      for (let i = startPage; i <= endPage; i++) {
+        const pageBtn = document.createElement("button");
+        pageBtn.innerHTML = i.toString();
+        pageBtn.className = i === currentPage ? "active" : "";
+        pageBtn.disabled = totalItems === 0;
+        pageBtn.onclick = () => {
+          currentPage = i;
+          renderTable();
+        };
+        pageNumbersDiv.appendChild(pageBtn);
+      }
+
+      // زر "التالي"
+      const nextBtn = document.createElement("button");
+      nextBtn.innerHTML = "›";
+      nextBtn.disabled = currentPage === totalPages || totalItems === 0;
+      nextBtn.onclick = () => {
+        currentPage++;
+        renderTable();
+      };
+      pageNumbersDiv.appendChild(nextBtn);
+
+      // زر "الأخير"
+      const lastBtn = document.createElement("button");
+      lastBtn.innerHTML = "»";
+      lastBtn.disabled = currentPage === totalPages || totalItems === 0;
+      lastBtn.onclick = () => {
+        currentPage = totalPages;
+        renderTable();
+      };
+      pageNumbersDiv.appendChild(lastBtn);
+
+      // تحديث معلومات الصفحة
+      const pageInfo = document.getElementById("page-info");
+      const startItem = totalItems === 0 ? 0 : (currentPage - 1) * pageSize + 1;
+      const endItem = Math.min(currentPage * pageSize, totalItems);
+      pageInfo.innerHTML = `عرض ${startItem} إلى ${endItem} من ${totalItems}`;
+    }
+
+    // دالة لتغيير حجم الصفحة
+    function changePageSize() {
+      pageSize = parseInt(document.getElementById("page-size").value);
+      currentPage = 1; // إعادة تعيين الصفحة إلى الأولى
+      renderTable();
+    }
+
+    // عرض الجدول لأول مرة
+    renderTable();
+  </script>
+</body>
+</html> -->
